Tabs: fix section spacing.

--- a/stories/Components/Tab/tab.scss
+++ b/stories/Components/Tab/tab.scss
@@ -57,7 +57,7 @@
 }
 
 .mg-tabs__section {
-  padding: $mg-spacing-75 $mg-spacing-150;
+  padding: $mg-spacing-200 0;
 }
 
 [dir="rtl"] {
